# virtual-people-training

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE
.github/workflows/: build-test.yml  model-compiler-integration-tests.yml
src/main/cc/wfa/virtual_people/training/model_checker/: BUILD.bazel  model_checker_main.cc  model_names_checker.cc  model_names_checker.h  model_seeds_checker.cc  model_seeds_checker.h
src/main/cc/wfa/virtual_people/training/model_compiler/: BUILD.bazel  compiler.cc  compiler.h  compiler_main.cc  constants.h  field_filter_utils.cc  field_filter_utils.h  specification_utils.cc  specification_utils.h
src/main/cc/wfa/virtual_people/training/model_compiler/comprehension/: BUILD.bazel  comprehension_method.cc  comprehension_method.h  contextual_boolean_expression.cc  contextual_boolean_expression.h  spec_util.cc  spec_util.h
src/main/proto/wfa/virtual_people/training/: BUILD.bazel  activity_density_function.proto  comprehend.proto  model_config.proto
src/main/py/wfa/virtual_people/training/adf/: BUILD.bazel  dirac_mixture.py
src/test/cc/wfa/virtual_people/training/model_checker/: BUILD.bazel  model_names_checker_test.cc  model_seeds_checker_test.cc
src/test/cc/wfa/virtual_people/training/model_compiler/: BUILD.bazel  compiler_main_test.cc  compiler_test.cc  field_filter_utils_test.cc  integration_test.cc  specification_utils_test.cc
src/test/cc/wfa/virtual_people/training/model_compiler/comprehension/: BUILD.bazel  comprehension_method_test.cc  contextual_boolean_expression_test.cc  spec_util_test.cc
src/test/cc/wfa/virtual_people/training/model_compiler/comprehension/test_data/: BUILD.bazel  test_csv.csv
src/test/cc/wfa/virtual_people/training/model_compiler/test_data/: BUILD.bazel  activity_density_function.textproto  census_records.textproto  compiled_node_for_population_node.textproto  compiled_node_for_population_node_discretization.textproto  compiled_node_for_population_node_kappa_less_than_one.textproto  compiled_node_for_population_node_redistribute_probabilities_for_cookie_monster_pool.textproto  compiled_node_for_population_node_redistribute_probabilities_for_empty_delta_pool.textproto  compiled_node_for_population_node_redistribute_probabilities_for_empty_pools.textproto  conditional_assignment.textproto  conditional_merge.textproto  config.textproto  country_code_1_filter  geometric_shredder.textproto  model_node_config_population_node.textproto  model_node_config_population_node_alpha_not_sum_to_one.textproto  model_node_config_population_node_discretization.textproto  model_node_config_population_node_kappa_less_than_one.textproto  model_node_config_population_node_no_adf.textproto  model_node_config_population_node_no_census.textproto  model_node_config_population_node_no_multipool.textproto  model_node_config_population_node_record_overlap_with_reserved_id_range.textproto  model_node_config_population_node_redistribute_probabilities_for_empty_pools.textproto  multiplicity.textproto  multipool.textproto  single_demo_bucket_model.textproto  single_demo_bucket_model_node_config.textproto  sparse_update_matrix.textproto  stop_node_tree.textproto  stop_node_tree_config  true_filter  update_matrix
src/test/cc/wfa/virtual_people/training/util/: BUILD.bazel  golden_generator.cc  integration_test.cc
src/test/cc/wfa/virtual_people/training/util/test_data/: BUILD.bazel  config.textproto
src/test/proto/wfa/virtual_people/training/: BUILD.bazel  config.proto
src/test/py/wfa/virtual_people/training/adf/: BUILD.bazel  dirac_mixture_test.py
src/test/textproto/integration_tests_data/: census_records.textproto  cookied_field_filter.textproto  country_region_code_conditional_merge.textproto  email_acting_demo_id_space_conditional_merge.textproto  email_demo_conditional_assignment.textproto  email_user_field_filter.textproto  female_18_24_field_filter.textproto  female_25_34_field_filter.textproto  female_35_99_field_filter.textproto  gb_gb_female_18_24_adf.textproto  gb_gb_female_18_24_multipool.textproto  gb_gb_female_25_34_adf.textproto  gb_gb_female_25_34_multipool.textproto  gb_gb_female_35_99_adf.textproto  gb_gb_female_35_99_multipool.textproto  gb_gb_male_18_24_adf.textproto  gb_gb_male_18_24_multipool.textproto  gb_gb_male_25_34_adf.textproto  gb_gb_male_25_34_multipool.textproto  gb_gb_male_35_99_adf.textproto  gb_gb_male_35_99_multipool.textproto  male_18_24_field_filter.textproto  male_25_34_field_filter.textproto  male_35_99_field_filter.textproto  merged_r_update_matrix.textproto  person_country_code_gb_field_filter.textproto  person_country_code_us_field_filter.textproto  person_region_code_gb_field_filter.textproto  person_region_code_us_field_filter.textproto  phone_acting_demo_id_space_conditional_merge.textproto  phone_demo_conditional_assignment.textproto  phone_user_field_filter.textproto  root_node_config.textproto  true_field_filter.textproto  us_us_female_18_24_adf.textproto  us_us_female_18_24_multipool.textproto  us_us_female_25_34_adf.textproto  us_us_female_25_34_multipool.textproto  us_us_female_35_99_adf.textproto  us_us_female_35_99_multipool.textproto  (+6 more)
