load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "comprehend_proto",
    srcs = ["comprehend.proto"],
    strip_import_prefix = "/src/main/proto",
)

cc_proto_library(
    name = "comprehend_cc_proto",
    deps = [":comprehend_proto"],
)

proto_library(
    name = "activity_density_function_proto",
    srcs = ["activity_density_function.proto"],
    strip_import_prefix = "/src/main/proto",
    deps = [
        "@wfa_virtual_people_common//src/main/proto/wfa/virtual_people/common:field_filter_proto",
    ],
)

cc_proto_library(
    name = "activity_density_function_cc_proto",
    deps = [":activity_density_function_proto"],
)

proto_library(
    name = "model_config_proto",
    srcs = ["model_config.proto"],
    strip_import_prefix = "/src/main/proto",
    deps = [
        ":activity_density_function_proto",
        ":comprehend_proto",
        "@wfa_virtual_people_common//src/main/proto/wfa/virtual_people/common:field_filter_proto",
        "@wfa_virtual_people_common//src/main/proto/wfa/virtual_people/common:model_proto",
    ],
)

cc_proto_library(
    name = "model_config_cc_proto",
    deps = [":model_config_proto"],
)
