load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "config_proto",
    srcs = ["config.proto"],
    strip_import_prefix = "/src/test/proto",
)

cc_proto_library(
    name = "config_cc_proto",
    deps = [":config_proto"],
)
