load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

package(default_visibility = [
    "//src/main/cc/wfa/virtual_people/training/model_compiler:__subpackages__",
    "//src/test/cc/wfa/virtual_people/training/model_compiler:__subpackages__",
    "//src/test/cc/wfa/virtual_people/training/util:__subpackages__",
])

_INCLUDE_PREFIX = "/src/main/cc"

cc_library(
    name = "compiler",
    srcs = [
        "compiler.cc",
        "specification_utils.cc",
    ],
    hdrs = [
        "compiler.h",
        "specification_utils.h",
    ],
    strip_include_prefix = _INCLUDE_PREFIX,
    deps = [
        ":constants",
        ":field_filter_utils",
        "//src/main/proto/wfa/virtual_people/training:model_config_cc_proto",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_protobuf//:protobuf",
        "@virtual_people_common//src/main/cc/wfa/virtual_people/common/field_filter",
        "@virtual_people_common//src/main/proto/wfa/virtual_people/common:field_filter_cc_proto",
        "@virtual_people_common//src/main/proto/wfa/virtual_people/common:model_cc_proto",
        "@wfa_common_cpp//src/main/cc/common_cpp/macros",
        "@wfa_common_cpp//src/main/cc/common_cpp/protobuf_util:textproto_io",
    ],
)

cc_library(
    name = "constants",
    hdrs = ["constants.h"],
    strip_include_prefix = _INCLUDE_PREFIX,
)

cc_library(
    name = "field_filter_utils",
    srcs = ["field_filter_utils.cc"],
    hdrs = ["field_filter_utils.h"],
    strip_include_prefix = _INCLUDE_PREFIX,
    deps = [
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@virtual_people_common//src/main/proto/wfa/virtual_people/common:field_filter_cc_proto",
    ],
)

cc_binary(
    name = "compiler_main",
    srcs = ["compiler_main.cc"],
    deps = [
        ":compiler",
        "//src/main/cc/wfa/virtual_people/training/model_compiler/comprehension:comprehension_lib",
        "//src/main/proto/wfa/virtual_people/training:model_config_cc_proto",
        "@com_github_google_glog//:glog",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@virtual_people_common//src/main/proto/wfa/virtual_people/common:model_cc_proto",
        "@wfa_common_cpp//src/main/cc/common_cpp/protobuf_util:textproto_io",
    ],
)
