# Project Halo Adaptive Dirac Mixture training code.
load("@pip_dependencies//:requirements.bzl", "requirement")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "dirac_mixture",
    srcs = ["dirac_mixture.py"],
    deps = [
	"@com_google_absl_py//absl/testing:absltest",
	requirement("numpy")],
    srcs_version = "PY3"
)

