load("@rules_cc//cc:defs.bzl", "cc_test")

package(default_visibility = ["//visibility:private"])

cc_test(
    name = "specification_utils_test",
    srcs = ["specification_utils_test.cc"],
    data = [
        "//src/test/cc/wfa/virtual_people/training/model_compiler/test_data:conditional_assignment",
        "//src/test/cc/wfa/virtual_people/training/model_compiler/test_data:conditional_merge",
        "//src/test/cc/wfa/virtual_people/training/model_compiler/test_data:country_code_1_filter",
        "//src/test/cc/wfa/virtual_people/training/model_compiler/test_data:multiplicity",
        "//src/test/cc/wfa/virtual_people/training/model_compiler/test_data:sparse_update_matrix",
        "//src/test/cc/wfa/virtual_people/training/model_compiler/test_data:stop_node_tree",
        "//src/test/cc/wfa/virtual_people/training/model_compiler/test_data:stop_node_tree_config",
        "//src/test/cc/wfa/virtual_people/training/model_compiler/test_data:update_matrix",
    ],
    deps = [
        "//src/main/cc/wfa/virtual_people/training/model_compiler:compiler",
        "//src/main/proto/wfa/virtual_people/training:model_config_cc_proto",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_googletest//:gtest_main",
        "@com_google_protobuf//:protobuf",
        "@virtual_people_common//src/main/proto/wfa/virtual_people/common:field_filter_cc_proto",
        "@virtual_people_common//src/main/proto/wfa/virtual_people/common:model_cc_proto",
        "@wfa_common_cpp//src/main/cc/common_cpp/testing:common_matchers",
        "@wfa_common_cpp//src/main/cc/common_cpp/testing:status",
    ],
)

cc_test(
    name = "compiler_test",
    srcs = ["compiler_test.cc"],
    data = [
        "//src/test/cc/wfa/virtual_people/training/model_compiler/test_data:country_code_1_filter",
        "//src/test/cc/wfa/virtual_people/training/model_compiler/test_data:multiplicity",
        "//src/test/cc/wfa/virtual_people/training/model_compiler/test_data:true_filter",
        "//src/test/cc/wfa/virtual_people/training/model_compiler/test_data:update_matrix",
    ],
    deps = [
        "//src/main/cc/wfa/virtual_people/training/model_compiler:compiler",
        "//src/main/proto/wfa/virtual_people/training:model_config_cc_proto",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_googletest//:gtest_main",
        "@com_google_protobuf//:protobuf",
        "@virtual_people_common//src/main/proto/wfa/virtual_people/common:model_cc_proto",
        "@wfa_common_cpp//src/main/cc/common_cpp/testing:common_matchers",
        "@wfa_common_cpp//src/main/cc/common_cpp/testing:status",
    ],
)
