# Adaptive Dirac Mixture tests.

package(default_visibility = ["//visibility:public"])

py_test(
    name = "dirac_mixture_test",
    srcs = ["dirac_mixture_test.py"],
    python_version = "PY3",
    srcs_version = "PY3",
    deps = ["//src/main/py/wfa/virtual_people/training/adf:dirac_mixture"],
)
