exports_files([
    "activity_density_function.textproto",
    "census_records.textproto",
    "compiled_node_for_population_node_discretization.textproto",
    "compiled_node_for_population_node_kappa_less_than_one.textproto",
    "compiled_node_for_population_node_redistribute_probabilities_for_empty_pools.textproto",
    "compiled_node_for_population_node.textproto",
    "conditional_assignment.textproto",
    "conditional_merge.textproto",
    "country_code_1_filter.textproto",
    "model_node_config_population_node_alpha_not_sum_to_one.textproto",
    "model_node_config_population_node_discretization.textproto",
    "model_node_config_population_node_kappa_less_than_one.textproto",
    "model_node_config_population_node_no_adf.textproto",
    "model_node_config_population_node_no_census.textproto",
    "model_node_config_population_node_no_multipool.textproto",
    "model_node_config_population_node_redistribute_probabilities_for_empty_pools.textproto",
    "model_node_config_population_node.textproto",
    "multiplicity.textproto",
    "multipool.textproto",
    "sparse_update_matrix.textproto",
    "stop_node_tree_config.textproto",
    "stop_node_tree.textproto",
    "true_filter.textproto",
    "update_matrix.textproto",
])
